--- a/brexit.Rmd
+++ b/brexit.Rmd
@@ -1,11 +1,16 @@
 ---
 title: "Brexit"
-author: "Naomi Ekas"
+author: "Kevin Diegel"
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r load-packages, message = FALSE, echo = FALSE}
 library(tidyverse)
+library(ggplot2)
+library(scales)
+library(forcats)
 ```
 
 In September 2019, YouGov survey asked 1,639 GB adults the following question:
@@ -62,7 +67,7 @@ ggplot(brexit, aes(y = opinion, fill = opinion)) +
   geom_bar() +
   facet_wrap(~region,
     nrow = 1, labeller = label_wrap_gen(width = 12),
-    # ___
+    scales = "free_x"
   ) +
   guides(fill = FALSE) +
   labs(
@@ -86,7 +91,29 @@ How is the story this visualisation telling different than the story the origina
 **Hint:** You'll need the **scales** package to improve axis labeling, which means you'll need to load it on top of the document as well.
 
 ```{r}
-# code goes here
+brexit %>%
+  count(region, opinion) %>%
+  group_by(region) %>%
+  mutate(opinion_prop = n / sum(n)) %>%
+  ggplot(aes (y = opinion, x = opinion_prop, fill = opinion)) + 
+  geom_col() + 
+  facet_wrap(~region,
+    nrow = 1, 
+    labeller = label_wrap_gen(width = 12)) +
+  guides(fill = FALSE) +
+  labs(
+    title = "Was Britain right/wrong to vote to leave EU?",
+    subtitle = "YouGov Survey Results, 2-3 September 2019",
+    caption = "Source: bit.ly/2lCJZVg",
+    x = NULL, y = NULL
+  ) +
+  scale_fill_manual(values = c(
+    "Wrong" = "#ef8a62",
+    "Right" = "#67a9cf",
+    "Don't know" = "gray"
+  )) +
+  theme_minimal() + 
+  scale_x_continuous(labels = percent)
 ```
 
 ### Exercise 3 - Comparing proportions across bars
@@ -95,5 +122,35 @@ Recreate the same visualization from the previous exercise, this time dodging th
 How is the story this visualization telling different than the story the previous plot tells?
 
 ```{r}
-# code goes here
+brexit %>%
+  count(region, opinion) %>%
+  group_by(region) %>%
+  mutate(opinion_prop = n / sum(n)) %>%
+  ggplot(aes (y = fct_rev(region), x = opinion_prop, fill = opinion)) + 
+  geom_col(position = "dodge") + 
+  #facet_wrap(~region,
+    #nrow = 1, 
+   # labeller = label_wrap_gen(width = 12)) +
+  guides(fill = guide_legend(reverse = TRUE)) +
+  labs(
+    title = "Was Britain right/wrong to vote to leave EU?",
+    subtitle = "YouGov Survey Results, 2-3 September 2019",
+    caption = "Source: bit.ly/2lCJZVg",
+    x = NULL, y = NULL, fill = "Opinion"
+  ) +
+  scale_fill_manual(values = c(
+    "Wrong" = "#ef8a62",
+    "Right" = "#67a9cf",
+    "Don't know" = "gray"
+  )) +
+  theme_minimal() + 
+  scale_x_continuous(labels = percent)
+```
+
+
+```{r}
+#to flip
+#guides(fill = guide_legend(reverse = TRUE))
+#to turn off a legend 
+#guides(fill = TRUE)
 ```
